prql-compiler/src/snapshots/prql_compiler__tests_lib__sql.postgres.snap
---
source: prql-compiler/src/lib.rs
expression: "Target::from_str(&name)"
---
Ok(
    Sql(
        Some(
            Postgres,
        ),
    ),
)
